# injection

./: Makefile  README.md  pyproject.toml
.github/actions/code-style/: action.yml
.github/actions/deploy/: action.yml
.github/actions/environment/: action.yml
.github/actions/tests/: action.yml
.github/workflows/: cd.yml
documentation/: basic-usage.md  integrations.md  scoped-dependencies.md  testing.md
documentation/example/tests/factories/: test_user_factory.py
documentation/example/tests/services/: test_hasher.py  test_uuid_service.py
injection/: __init__.py  __init__.pyi  exceptions.py  utils.py
injection/_core/: __init__.py  descriptors.py  hook.py  injectables.py  module.py  scope.py
injection/_core/common/: asynchronous.py  event.py  invertible.py  key.py  lazy.py  type.py
injection/integrations/: fastapi.py
injection/testing/: __init__.py  __init__.pyi
tests/: test_constant.py  test_inject.py  test_injectable.py  test_scoped.py  test_singleton.py
tests/core/: test_descriptors.py  test_module.py  test_scope.py
tests/integrations/: test_fastapi.py
tests/utils/: test_load_modules_with_keywords.py  test_load_packages.py  test_load_profile.py
tests/utils/package2/sub_package/: injectable.py
