[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
bench = [
    "tabulate",
    "typer",
    "types-tabulate",
]
dev = [
    "hatch",
    "mypy",
    "ruff",
]
test = [
    "fastapi",
    "httpx",
    "pydantic",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[project]
name = "python-injection"
version = "0.0.0"
description = "Fast and easy dependency injection framework."
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12, <4"
authors = [{ name = "remimd" }]
keywords = ["dependencies", "dependency", "inject", "injection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Repository = "https://github.com/100nm/python-injection"

[tool.coverage.report]
exclude_lines = [
    "pass",
    "pragma: no cover",
    "raise NotImplementedError",
    "return NotImplemented",
]

[tool.coverage.run]
omit = ["bench.py"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_defs = true
exclude = [
    "tests/",
    "bench.py",
    "conftest.py",
]
follow_imports = "silent"
no_implicit_reexport = true
plugins = ["pydantic.mypy"]
warn_redundant_casts = true
warn_unused_ignores = true

[tool.hatch.build]
skip-excluded-dirs = true

[tool.hatch.build.targets.sdist]
include = ["injection"]

[tool.hatch.build.targets.wheel]
packages = ["injection"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
python_files = "test_*.py"
addopts = "--tb short --cov ./ --cov-report term-missing:skip-covered"
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
testpaths = "**/tests/"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = ["F", "I", "N"]
ignore = ["N818"]
fixable = ["ALL"]

[tool.uv]
default-groups = ["bench", "dev", "test"]
package = true
